<resources>
    <string name="app_name">PokeTracker</string>
    <string name="header_main">Pokemon Tracker</string>
    <string name="header_desc">Register your new catch</string>
    <string name="natnum">National Number</string>
    <string name="name">Name</string>
    <string name="species">Species</string>
    <string name="gender">Gender</string>
    <string name="height">Height</string>
    <string name="weight">Weight</string>
    <string name="level">Level</string>
    <string name="base_stats">Base Stats</string>
    <string name="stats_hp">HP</string>
    <string name="stats_atk">ATK</string>
    <string name="stats_def">DEF</string>
    <string name="natnum_hint">0 to 1010</string>
    <string name="reset_button">Reset</string>
    <string name="save_button">Save</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="genderless">N/A</string>
    <string-array name="level_num">
        <!-- bruh -->
        <item>N/A</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
        <item>13</item>
        <item>14</item>
        <item>15</item>
        <item>16</item>
        <item>17</item>
        <item>18</item>
        <item>19</item>
        <item>20</item>
        <item>21</item>
        <item>22</item>
        <item>23</item>
        <item>24</item>
        <item>25</item>
        <item>26</item>
        <item>27</item>
        <item>28</item>
        <item>29</item>
        <item>30</item>
        <item>31</item>
        <item>32</item>
        <item>33</item>
        <item>34</item>
        <item>35</item>
        <item>36</item>
        <item>37</item>
        <item>38</item>
        <item>39</item>
        <item>40</item>
        <item>41</item>
        <item>42</item>
        <item>43</item>
        <item>44</item>
        <item>45</item>
        <item>46</item>
        <item>47</item>
        <item>48</item>
        <item>49</item>
        <item>50</item>
    </string-array>
    <string name="natnum_default">896</string>
    <string name="name_default">Glastrier</string>
    <string name="species_default">Wild Horse Pokemon</string>
    <string name="height_default">2.2</string>
    <string name="weight_default">800.0</string>
    <string name="stat_default">0</string>
    <string name="alphabet_only">abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ .</string>
    <string name="name_hint">3 to 12 alphabetical characters</string>
    <string name="stat_def_hint">5 to 614</string>
    <string name="stat_atk_hint">5 to 526</string>
    <string name="stat_hp_hint">1 to 362</string>
    <string name="weight_hint">0.1 to 820.0</string>
    <string name="height_hint">0.3 to 19.99</string>
    <string name="switch_to_constraint">Switch to Constraint</string>
    <string name="switch_to_table">Switch to Table</string>
    <string name="switch_to_linear">Switch to Linear</string>
    <string name="read_permission">com.poketracker.dbprovider.permission.READ_PERMISSION</string>
    <string name="back_to_form">Back to Form</string>
    <string name="view_data">View DB</string>
</resources>