<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:stretchColumns="1"
    tools:context=".ActivityTable">

    <TableRow
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/header_title_TV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/header_main"
            android:textAlignment="center"
            android:textColor="#0B0000"
            android:textSize="20sp"
            android:textStyle="bold"
            />
    </TableRow>

    <TableRow
        android:gravity="center_horizontal">
        <TextView
            android:id="@+id/header_desc_TV"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingBottom="18dp"
            android:text="@string/header_desc"
            android:textAlignment="center" />
    </TableRow>

    <TableRow
        android:gravity="center_horizontal"
        android:paddingVertical="4dp">
        <TextView
            android:id="@+id/natnum_TV"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:text="@string/natnum"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:paddingStart="14dp"
            android:paddingEnd="0dp"/>

        <EditText
            android:id="@+id/natnum_ET"
            android:layout_width="251dp"
            android:layout_height="35dp"
            android:autofillHints="Number"
            android:ems="10"
            android:hint="@string/natnum_hint"
            android:inputType="number"
            android:textColor="#000000"
            android:textColorHint="#757575"
            android:textSize="14sp" />
    </TableRow>

    <TableRow
        android:gravity="center_horizontal"
        android:paddingVertical="4dp">
        <TextView
            android:id="@+id/name_TV"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:text="@string/name"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:paddingStart="14dp"
            android:paddingEnd="0dp"/>

        <EditText
            android:id="@+id/name_ET"
            android:layout_width="251dp"
            android:layout_height="35dp"
            android:autofillHints="Name of Pokemon"
            android:ems="10"
            android:hint="@string/name_hint"
            android:inputType="textCapWords"
            android:textColor="#000000"
            android:textColorHint="#757575"
            android:textSize="14sp" />
    </TableRow>

    <TableRow
        android:gravity="center_horizontal"
        android:paddingVertical="4dp">
        <TextView
            android:id="@+id/species_TV"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:text="@string/species"
            android:textAlignment="textStart"
            android:textColor="#000000"
            android:paddingStart="14dp"
            android:paddingEnd="0dp"/>

        <EditText
            android:id="@+id/species_ET"
            android:layout_width="251dp"
            android:layout_height="35dp"
            android:autofillHints="Species"
            android:ems="10"
            android:inputType="textCapWords"
            android:textColor="#000000"
            android:textColorHint="#757575"
            android:textSize="14sp" />
    </TableRow>

    <TableRow
        android:gravity="center_horizontal"
        android:paddingVertical="4dp">

        <TextView
            android:id="@+id/gender_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingStart="14dp"
            android:paddingEnd="0dp"
            android:paddingTop="7dp"
            android:text="@string/gender"
            android:textAlignment="textStart"
            android:textColor="#000000" />

        <RadioGroup
            android:id="@+id/gender_RG"
            android:layout_width="251dp"
            android:layout_height="35dp"
            android:orientation="horizontal"
            android:textAlignment="textStart"
            app:layout_constraintStart_toEndOf="@+id/gender_TV"
            app:layout_constraintTop_toBottomOf="@+id/species_ET">

            <RadioButton
                android:id="@+id/male_RB"
                android:layout_width="70dp"
                android:layout_height="33dp"
                android:text="@string/male"
                android:textSize="12sp"
                tools:layout_editor_absoluteX="164dp"
                tools:layout_editor_absoluteY="216dp" />

            <RadioButton
                android:id="@+id/female_RB"
                android:layout_width="80dp"
                android:layout_height="33dp"
                android:text="@string/female"
                android:textSize="12sp"
                tools:layout_editor_absoluteX="164dp"
                tools:layout_editor_absoluteY="216dp" />

            <RadioButton
                android:id="@+id/no_gen_RB"
                android:layout_width="100dp"
                android:layout_height="33dp"
                android:text="@string/genderless"
                android:textSize="12sp"
                tools:layout_editor_absoluteX="164dp"
                tools:layout_editor_absoluteY="216dp" />
        </RadioGroup>
    </TableRow>

    <TableRow
        android:gravity="center_horizontal"
        android:paddingVertical="4dp">
        <TextView
            android:id="@+id/height_TV"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:paddingStart="14dp"
            android:paddingEnd="0dp"
            android:text="@string/height"
            android:textAlignment="textStart"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/height_ET"
            android:layout_width="251dp"
            android:layout_height="35dp"
            android:autofillHints="Number"
            android:ems="10"
            android:hint="@string/height_hint"
            android:inputType="numberDecimal"
            android:textColor="#000000"
            android:textColorHint="#757575"
            android:textSize="14sp" />
    </TableRow>

    <TableRow
        android:gravity="center_horizontal"
        android:paddingVertical="4dp">
        <TextView
            android:id="@+id/weight_TV"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:paddingStart="14dp"
            android:paddingEnd="0dp"
            android:text="@string/weight"
            android:textAlignment="textStart"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/weight_ET"
            android:layout_width="251dp"
            android:layout_height="35dp"
            android:autofillHints="Number"
            android:ems="10"
            android:hint="@string/weight_hint"
            android:inputType="numberDecimal"
            android:textColor="#000000"
            android:textColorHint="#757575"
            android:textSize="14sp" />
    </TableRow>

    <TableRow
        android:gravity="center_horizontal"
        android:paddingVertical="4dp">
        <TextView
            android:id="@+id/level_TV"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:paddingStart="14dp"
            android:paddingEnd="0dp"
            android:text="@string/level"
            android:textAlignment="textStart"
            android:textColor="#000000" />

        <Spinner
            android:id="@+id/level_SP"
            android:layout_width="251dp"
            android:layout_height="35dp"
            android:entries="@array/level_num" />
    </TableRow>

    <TableRow>
        <TextView
            android:id="@+id/basestats_TV"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="28dp"
            android:paddingBottom="9dp"
            android:paddingStart="8dp"
            android:paddingEnd="0dp"
            android:text="@string/base_stats"
            android:textAlignment="textStart"
            android:textColor="#0B0000"
            android:textSize="20sp"
            android:textStyle="bold" />
    </TableRow>

    <TableRow
        android:gravity="center_horizontal"
        android:paddingVertical="4dp">
        <TextView
            android:id="@+id/stat_hp_TV"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:paddingStart="14dp"
            android:paddingEnd="0dp"
            android:text="@string/stats_hp"
            android:textAlignment="textStart"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/stat_hp_ET"
            android:layout_width="251dp"
            android:layout_height="35dp"
            android:autofillHints="Number"
            android:ems="10"
            android:hint="@string/stat_hp_hint"
            android:inputType="number"
            android:textColor="#000000"
            android:textColorHint="#757575"
            android:textSize="14sp" />
    </TableRow>

    <TableRow
        android:gravity="center_horizontal"
        android:paddingVertical="4dp">
        <TextView
            android:id="@+id/stat_atk_TV"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:paddingStart="14dp"
            android:paddingEnd="0dp"
            android:text="@string/stats_atk"
            android:textAlignment="textStart"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/stat_atk_ET"
            android:layout_width="251dp"
            android:layout_height="35dp"
            android:autofillHints="Number"
            android:ems="10"
            android:hint="@string/stat_atk_hint"
            android:inputType="number"
            android:textColor="#000000"
            android:textColorHint="#757575"
            android:textSize="14sp" />
    </TableRow>

    <TableRow
        android:gravity="center_horizontal"
        android:paddingVertical="4dp">
        <TextView
            android:id="@+id/stat_def_TV"
            android:layout_width="wrap_content"
            android:layout_height="22dp"
            android:paddingStart="14dp"
            android:paddingEnd="0dp"
            android:text="@string/stats_def"
            android:textAlignment="textStart"
            android:textColor="#000000" />

        <EditText
            android:id="@+id/stat_def_ET"
            android:layout_width="251dp"
            android:layout_height="35dp"
            android:autofillHints="Number"
            android:ems="10"
            android:hint="@string/stat_def_hint"
            android:inputType="number"
            android:textColor="#000000"
            android:textColorHint="#757575"
            android:textSize="14sp" />
    </TableRow>

    <TableRow
        android:gravity="center_horizontal"
        android:paddingTop="20dp">
        <Button
            android:id="@+id/save_BT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/save_button" />
    </TableRow>

    <TableRow
        android:gravity="center_horizontal"
        android:paddingTop="4dp">
        <Button
            android:id="@+id/reset_BT"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/reset_button" />
    </TableRow>

</TableLayout>